# django-smooth-migrations

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
smooth_migrations/: context.py  exceptions.py  fields.py  models.py  utils.py
smooth_migrations/management/commands/: apply_migrations.py  show_migration_changes.py
tests/test_project/: settings.py  urls.py  wsgi.py
tests/test_project/app_add_not_null_column/: models.py
tests/test_project/app_add_not_null_column/migrations/: 0001_initial.py  0002_addnotnullcolumn_new_not_null_field.py
tests/test_project/app_drop_column/: models.py
tests/test_project/app_drop_column/migrations/: 0001_initial.py  0002_alter_dropcolumn_second_field.py
tests/test_project/app_drop_table/: models.py
tests/test_project/app_drop_table/migrations/: 0001_initial.py
