[tool.poetry]
name = "django-smooth-migrations"
version = "0.2.0"
description = "Django library for backward-compatible model changes and automatic migration rollback."
authors = [
    "Sergio Torrado <sergio.itp16@gmail.com>",
]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/serivt/django-smooth-migrations"
repository = "https://github.com/serivt/django-smooth-migrations"
packages = [
    {include = "smooth_migrations"}
]

[tool.poetry.dependencies]
python = ">=3.10, <=3.13"
django = ">=4.0, <6.0"

[tool.poetry.group.linters]
optional = true

[tool.poetry.group.linters.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = '''
/(
  | migrations
  | venv/
)/
'''

[tool.isort]
skip_glob = [
  "**/migrations/*",
  "**/venv/*",
  "**/.venv/*",
]
profile = "black"
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
line_length = 119
skip = "migrations"
default_section = "THIRDPARTY"
known_django = "django"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]
combine_as_imports = true
include_trailing_comma = true
not_skip = "__init__.py"